@@ -469,6 +469,38 @@ public class TestContextQuery extends LuceneTestCase {
   }
 
   @Test
+  public void testBigNumberOfContextsQuery() throws Exception {
+    Analyzer analyzer = new MockAnalyzer(random());
+    RandomIndexWriter iw =
+        new RandomIndexWriter(random(), dir, iwcWithSuggestField(analyzer, "suggest_field"));
+    for (int i = 1; i < 1001; i++) {
+      Document document = new Document();
+      document.add(
+          new ContextSuggestField("suggest_field", "suggestion" + i, 1001 - i, "group" + i));
+      iw.addDocument(document);
+    }
+    iw.commit();
+
+    DirectoryReader reader = iw.getReader();
+    SuggestIndexSearcher suggestIndexSearcher = new SuggestIndexSearcher(reader);
+    ContextQuery query =
+        new ContextQuery(new PrefixCompletionQuery(analyzer, new Term("suggest_field", "sugg")));
+    for (int i = 1; i < 1001; i++) {
+      query.addContext("group" + i, 1);
+    }
+    TopSuggestDocs suggest = suggestIndexSearcher.suggest(query, 5, false);
+    assertSuggestions(
+        suggest,
+        new Entry("suggestion1", "group1", 1000),
+        new Entry("suggestion2", "group2", 999),
+        new Entry("suggestion3", "group3", 998),
+        new Entry("suggestion4", "group4", 997),
+        new Entry("suggestion5", "group5", 996));
+    reader.close();
+    iw.close();
+  }
+
+  @Test
   public void testAllContextQuery() throws Exception {
     Analyzer analyzer = new MockAnalyzer(random());
     RandomIndexWriter iw =
